fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 body {
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: scroll;
 }
 
 .App {
