--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@
 body {
 	background: rgb(64,64,64);
 	background: radial-gradient(circle, rgba(64,64,64,1) 0%, rgba(32,32,32,1) 100%);
+	overflow: scroll;
 }
 
